# video-scene-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
data/eval/: qa_test_set.jsonl
notebooks/: 00_smoke_test.ipynb
reports/: siglip_lora_eval.md
src/scripts/: check_chroma.py  check_frames.py  check_rules.py  check_siglip_embedding.py  run_caption.py  run_extract.py  run_ingest.py  run_label_frames.py  trace_demo.py
src/video_agent/: agent.py  api.py  captioner.py  evaluate.py  evaluate_siglip.py  finetune.py  frame_extractor.py  ingest.py  pipeline.py  rules.py  schemas.py  tools.py  ui.py
static/: README.md  index.html
static/assets/: README.md
static/css/: styles.css
static/js/: main.js
tests/: test_agent_deepeval.py  test_agent_quality.py
